# ChangeLog for games-strategy/wesnoth
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.86 2007/01/14 03:41:06 mr_bones_ Exp $

*wesnoth-1.2.1 (14 Jan 2007)

  14 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.2.1.ebuild:
  version bump

  28 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -wesnoth-1.1.14.ebuild:
  clean beta version

*wesnoth-1.2 (28 Dec 2006)

  28 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org> +wesnoth-1.2.ebuild:
  version bump

*wesnoth-1.1.14 (16 Dec 2006)

  16 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -wesnoth-1.1.11.ebuild, -wesnoth-1.1.12.ebuild, -wesnoth-1.1.13.ebuild,
  +wesnoth-1.1.14.ebuild:
  masked version bump; clean old ebuilds

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> wesnoth-1.0.2.ebuild:
  Remove old virtual/x11 dependency.

*wesnoth-1.1.13 (05 Dec 2006)

  05 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.1.13.ebuild:
  masked version bump

*wesnoth-1.1.12 (13 Nov 2006)

  13 Nov 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.1.12.ebuild:
  masked version bump

  03 Nov 2006; Tristan Heaven <nyhm@gentoo.org> wesnoth-1.1.11.ebuild:
  Add nls dependencies

*wesnoth-1.1.11 (06 Oct 2006)

  06 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.1.11.ebuild:
  masked version bump

*wesnoth-1.1.10 (21 Sep 2006)

  21 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.1.10.ebuild:
  masked version bump

  10 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.0.2.ebuild,
  wesnoth-1.1.9.ebuild:
  add built_with_use check for bug #146427

*wesnoth-1.1.9 (27 Aug 2006)

  27 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +wesnoth-1.1.9.ebuild:
  version bump

*wesnoth-1.1.8 (21 Aug 2006)

  21 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org> +files/Makefile.am,
  +files/configure.ac, wesnoth-1.0.2.ebuild, +wesnoth-1.1.8.ebuild: