@@ -8,14 +8,14 @@ EBUILD wesnoth-1.0.2.ebuild 2307 RMD160 4e4ad3645be683c84965e5b45d77ad254ffecdb6
 MD5 1bdfe2e8017aa701694caae81d6f4d03 wesnoth-1.0.2.ebuild 2307
 RMD160 4e4ad3645be683c84965e5b45d77ad254ffecdb6 wesnoth-1.0.2.ebuild 2307
 SHA256 a37ae1f4f1a468916f23f90fcac7ba5136b165b6b719dc864fc5872d3a63e160 wesnoth-1.0.2.ebuild 2307
-EBUILD wesnoth-1.2.1.ebuild 2439 RMD160 9fd205f9ede6f14acf32f90a52c616971ea2782b SHA1 615b4bd15cb05e7e0e03a84d3a6834c7cfa212e9 SHA256 549ebb00d24b2bb734723146a084302ee25c4df60bc9047db5b18f4be83de16a
-MD5 83c880d25528f1235586eb7f184d9373 wesnoth-1.2.1.ebuild 2439
-RMD160 9fd205f9ede6f14acf32f90a52c616971ea2782b wesnoth-1.2.1.ebuild 2439
-SHA256 549ebb00d24b2bb734723146a084302ee25c4df60bc9047db5b18f4be83de16a wesnoth-1.2.1.ebuild 2439
-MISC ChangeLog 11597 RMD160 76806dbfed8c15b851db4d508be81982ca0d173c SHA1 44f473c454f55d1c1cad73528db10c465eb3101d SHA256 820c401b5afd6d2db750a4698ca8b2595966f3835a36c7d0e3fb2707adae3c7f
-MD5 755b882bf7b0f6071820ecc25321ca40 ChangeLog 11597
-RMD160 76806dbfed8c15b851db4d508be81982ca0d173c ChangeLog 11597
-SHA256 820c401b5afd6d2db750a4698ca8b2595966f3835a36c7d0e3fb2707adae3c7f ChangeLog 11597
+EBUILD wesnoth-1.2.1.ebuild 2673 RMD160 6f338ad801b4aaf4efb5cf83eed8ed34c3ca2d72 SHA1 0a9256bfb78efd1a5b272500f20d5747195a16e9 SHA256 a72cbe406c9b6e3f76d484ae1aa3d24690236daafed7e805b7bc0977787dd167
+MD5 70a049971f6491e6561db57b6c7553f0 wesnoth-1.2.1.ebuild 2673
+RMD160 6f338ad801b4aaf4efb5cf83eed8ed34c3ca2d72 wesnoth-1.2.1.ebuild 2673
+SHA256 a72cbe406c9b6e3f76d484ae1aa3d24690236daafed7e805b7bc0977787dd167 wesnoth-1.2.1.ebuild 2673
+MISC ChangeLog 11786 RMD160 e3eb17665b7a21c12fb3afa89f05ac7b995d00e7 SHA1 33805d2cb1c8a4408c6fa2cfadfd4f69867aa5a9 SHA256 1ab0f2c78c308a6c3932f102ebe755906d0e4cdc747419f333947b2e1840f8ec
+MD5 edb87cc2c06c04c89122461b0c5e477b ChangeLog 11786
+RMD160 e3eb17665b7a21c12fb3afa89f05ac7b995d00e7 ChangeLog 11786
+SHA256 1ab0f2c78c308a6c3932f102ebe755906d0e4cdc747419f333947b2e1840f8ec ChangeLog 11786
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea metadata.xml 158
