@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/wesnoth
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.86 2007/01/14 03:41:06 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/wesnoth/ChangeLog,v 1.87 2007/02/02 02:47:54 mr_bones_ Exp $
+
+  02 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org> wesnoth-1.2.1.ebuild:
+  Add media-libs/freetype for dedicated build until configure script is fixed
+  (reported by Miika Linnapuomi)
 
 *wesnoth-1.2.1 (14 Jan 2007)
 
